--- a/templates/partials/edit-button.html.twig
+++ b/templates/partials/edit-button.html.twig
@@ -9,7 +9,7 @@
     <div class='page-item' data-nav-id='/grav-cms{{ pageUrl }}'>
         <a class='page-edit frontend-edit-button' target='_blank' href='{{ editUrl }}'>
             {% if _showIcon == true %}
-                <i class='icon-feb-editor'></i>
+                <i class='fa fa-edit'></i>
             {% endif %}
             {% if _showLabel == true %}
                 <span class="label">
